# vehicle-monitoring-system

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
company/: models.py  serializers.py  test_models.py  urls.py  views.py
company/migrations/: 0001_initial.py
vehicle_monitoring_system/: asgi.py  settings.py  urls.py  wsgi.py
